--- a/index.html
+++ b/index.html
@@ -142,24 +142,29 @@
         <div id="result"></div>
     </div>
 
-    <script>
-        const studentData = {
-            "010-2615-4668": {
-                name: "김다현",
-                engName: "Kim Da Hyeon",
-                school: "포산중학교",
-                grade: "M1",
-                class: "3-12",
-                level: "Speaking",
-                group: "Jupiter",
-                period: "1기",
-                campus: "비슬고",
-                shuttle: "아니오"
-            },
-            // ... [여기에 전체 학생 데이터를 추가]
+    <!-- Firebase SDK 추가 -->
+    <script type="module">
+        // Firebase SDK 임포트
+        import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js';
+        import { getFirestore, collection, doc, getDoc } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js';
+
+        // Firebase 설정
+        const firebaseConfig = {
+            apiKey: "AIzaSyDzgCRM-hoR2OFQ6bsivBL4XUutOTatJy4",
+            authDomain: "winter-english-camp.firebaseapp.com",
+            projectId: "winter-english-camp",
+            storageBucket: "winter-english-camp.firebasestorage.app",
+            messagingSenderId: "158518679495",
+            appId: "1:158518679495:web:a3219eb05e513d3ccdabe2",
+            measurementId: "G-G35G6ZLCWB"
         };
 
-        function formatPhoneNumber(input) {
+        // Firebase 초기화
+        const app = initializeApp(firebaseConfig);
+        const db = getFirestore(app);
+
+        // 전역 함수로 등록
+        window.formatPhoneNumber = function(input) {
             let number = input.value.replace(/[^0-9]/g, '');
             let formatted = '';
 
@@ -184,57 +189,72 @@
             return period === "1기" ? "1기(1/7-1/17)" : "2기(1/13-1/23)";
         }
 
-        function searchStudent() {
+        window.searchStudent = async function() {
             const phoneNumber = document.getElementById('phoneNumber').value;
             const resultDiv = document.getElementById('result');
             resultDiv.style.display = 'block';
 
-            const student = studentData[phoneNumber];
-            if (student) {
-                resultDiv.innerHTML = `
-                    <div class="student-info">
-                        <span class="campus-badge">${getCampusFullName(student.campus)}</span>
-                        <span class="period-badge">${getPeriodFullName(student.period)}</span>
+            try {
+                // Firestore에서 학생 데이터 조회
+                const studentRef = doc(db, 'students', phoneNumber);
+                const studentSnap = await getDoc(studentRef);
 
-                        <div class="info-row">
-                            <span class="info-label">이름:</span>
-                            ${student.name} (${student.engName})
+                if (studentSnap.exists()) {
+                    const student = studentSnap.data();
+                    resultDiv.innerHTML = `
+                        <div class="student-info">
+                            <span class="campus-badge">${getCampusFullName(student.campus)}</span>
+                            <span class="period-badge">${getPeriodFullName(student.period)}</span>
+
+                            <div class="info-row">
+                                <span class="info-label">이름:</span>
+                                ${student.name} (${student.engName})
+                            </div>
+                            <div class="info-row">
+                                <span class="info-label">학교:</span>
+                                ${student.school}
+                            </div>
+                            <div class="info-row">
+                                <span class="info-label">학년:</span>
+                                ${student.grade}
+                            </div>
+                            <div class="info-row">
+                                <span class="info-label">반배정:</span>
+                                ${student.class}
+                            </div>
+                            <div class="info-row">
+                                <span class="info-label">레벨(반이름):</span>
+                                ${student.level}(${student.group})
+                            </div>
+                            <div class="info-row">
+                                <span class="info-label">셔틀버스:</span>
+                                ${student.shuttle || "신청안함"}
+                            </div>
+                            <div class="notice" style="font-size: 12px; color: #666; margin-top: 15px; margin-left: 100px;">
+                                레벨테스트 및 학년, 설문조사 결과를 고려하여 반이 배정되었습니다.
+                            </div>
                         </div>
-                        <div class="info-row">
-                            <span class="info-label">학교:</span>
-                            ${student.school}
+                    `;
+                } else {
+                    resultDiv.innerHTML = `
+                        <div class="not-found">
+                            <p>입력하신 연락처로 등록된 학생 정보가 없습니다.</p>
+                            <p>연락처를 다시 확인해 주세요.</p>
                         </div>
-                        <div class="info-row">
-                            <span class="info-label">학년:</span>
-                            ${student.grade}
-                        </div>
-                        <div class="info-row">
-                            <span class="info-label">반배정:</span>
-                            ${student.class}
-                        </div>
-                        <div class="info-row">
-                            <span class="info-label">레벨(반이름):</span>
-                            ${student.level}(${student.group})
-                        </div>
-                        <div class="info-row">
-                            <span class="info-label">셔틀버스:</span>
-                            ${student.shuttle || "신청안함"}
-                        </div>
-                        <div class="notice" style="font-size: 12px; color: #666; margin-top: 15px; margin-left: 100px;">
-                            레벨테스트 및 학년, 설문조사 결과를 고려하여 반이 배정되었습니다.
-                        </div>
-                    </div>
-                `;
-            } else {
+                    `;
+                }
+            } catch (error) {
+                console.error("Error fetching student data:", error);
                 resultDiv.innerHTML = `
                     <div class="not-found">
-                        <p>입력하신 연락처로 등록된 학생 정보가 없습니다.</p>
-                        <p>연락처를 다시 확인해 주세요.</p>
+                        <p>데이터를 불러오는 중 오류가 발생했습니다.</p>
+                        <p>잠시 후 다시 시도해주세요.</p>
                     </div>
                 `;
             }
         }
 
+        // Enter 키 이벤트 리스너
         document.getElementById('phoneNumber').addEventListener('keypress', function(e) {
             if (e.key === 'Enter') {
                 searchStudent();
