--- a/index.html
+++ b/index.html
@@ -237,6 +237,9 @@
                                 <span class="info-label">셔틀버스:</span>
                                 ${student.shuttle || "신청안함"}
                             </div>
+                        <div class="notice" style="font-size: 12px; color: #666; margin-top: 15px; margin-left: 100px;">
+                            레벨테스트 및 학년, 설문조사 결과를 고려하여 반이 배정되었습니다.
+                        </div>
                         </div>
                     `;
                 });
