--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
         }
 
         function getCampusFullName(campus) {
-            return campus === "비슬고" ? "테크노폴리스(비슬고) 캠퍼스" : "다사(서동중) 캠퍼스";
+            return campus === "테크노폴리스(비슬고)" ? "테크노폴리스(비슬고) 캠퍼스" : "다사(서동중) 캠퍼스";
         }
 
         function getPeriodFullName(period) {
